<resources>
    <string name="app_name">InicialApp</string>
    <string name="label_login">LOGIN</string>
    <string name="label_senha">SENHA</string>
    <string name="lb_login">LOGIN</string>
    <string name="lb_register">Registrar-se</string>
    <string name="lb_register_user">Cadastro de usuário</string>
    <string name="hint_telefone">Telefone</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_email">Email</string>
    <string name="hint_nome">Nome</string>
</resources>
